Alterações CR - Ordenando por Prioridade e Data Vencimento